--- a/ceta site/css/main.css
+++ b/ceta site/css/main.css
@@ -113,5 +113,15 @@ hr {
     display: inline-block;
 }
 .latestwork a {
-
+    position: absolute;
+    width: 225px;
+    height: 92px;
+    float: left;
+    display: block;
+    text-align: center;
+    background-color: #f8f8f8;
+    box-shadow: 0px 5px 0px #d7d7d7;
+    border: 1px;
+    border-radius: 10px;
+    padding: 5px;
 }
