--- a/test-project 2/css/main.css
+++ b/test-project 2/css/main.css
@@ -1,6 +1,11 @@
 body {
-    margin-left: 30px;
-    margin-right: 30px;
+    margin: 8px 0 0 0;
+}
+.fullwidth {
+    width: 100%;
+}
+.margi-page {
+    margin: 0 19%;
 }
 .header {
     width: 100%;
@@ -14,13 +19,11 @@ body {
 .logo {
     float:left;
     display: inline-block;
-    width: 49%;
 }
-.navi-menu{
-    width: 49%;
+.navi-menu {
     float: right;
 }
-ul, li, a {
+.navi-menu ul li, a {
     text-decoration: none;
     list-style: none;
     display: inline-block;
@@ -31,7 +34,6 @@ ul, li, a {
 }
 .slider img {
     border-radius: 10px;
-    margin-left: 247px;
     margin-top: 3%;
     box-shadow: 0px 10px grey;
 }
@@ -53,7 +55,7 @@ ul, li, a {
 }
 .cube-left {
     display: inline-block;
-    width: 32.69%;
+    width: 31.69%;
 }
 .pic1 {
     width: 100%;
@@ -74,9 +76,14 @@ ul, li, a {
 .cube-center {
     margin: 0px 10px;
 }
+.social-conect {
+    width: 100%;
+    display: inline-block;
+}
 .social {
     width: 32.69%;
     display: inline-block;
+    float: left;
 }
 .title-social {
     font-size: 18px;
@@ -93,9 +100,7 @@ input {
     height: 40px;
     border-radius: 10px;
     border: 1px solid silver;
-}
-::placeholder {
-    padding-left: 20px;
+    margin-top: 20px;
 }
 .btn-blue {
     width: 236px;
@@ -114,5 +119,67 @@ input {
 }
 .contact {
     width: 32.69%;
+
+    margin: 0px 10px;
+    float: left;
+}
+
+.news {
+    float: left;
+    width: 31.69%;
+}
+.news img {
+    float: left;
+    margin-right: 15px;
+}
+.line-dots-news {
+    border: 0.5px dashed silver ;
+    width: 97.69%;
+    float: left;
+    margin-top: 3.5px;
+}
+.line-fut{
+    height: 20px;
+    border: none;
+    background-color: rgb(76, 76, 76);
+    margin-bottom: 0px;
+    width: 161%;
+    margin-left: -289px;
+}
+.footer{
+    background-color: rgb(51, 51, 51);
+    height: 200px;
+    width: 161%;
+    margin-left: -289px;
+}
+.f-left {
     display: inline-block;
+    padding-left: 291px;
+}
+.f-left p { 
+    color: rgb(137, 137, 137);
+}
+.sec-nav {
+    margin-left: -62px;
+}
+.sec-nav ul li, a {
+    text-decoration: none;
+    display: inline-block;
+    color: rgb(137, 137, 137);   
+}
+.f-right {
+    display: inline-block;
+    float: right;
+    color: rgb(137, 137, 137);
+    width: 31.69%;  
+}
+.fullwfooter {
+    width: 100%;
+    margin: 0 auto;
+}
+.colf {
+    color: rgb(137, 137, 137);  
+}
+.back-slider {
+    background-color: black;
 }
