--- a/test-project 2/css/main.css
+++ b/test-project 2/css/main.css
@@ -32,10 +32,18 @@ body {
     font-family: Georgia;
     
 }
+.slider {
+    background-image: linear-gradient(rgb(23, 23, 23) , rgb(95, 95, 95));
+    display: inline-block;
+    width: -webkit-fill-available !important;
+    margin-right: -30%;
+    margin-left: -31%;
+}
 .slider img {
     border-radius: 10px;
-    margin-top: 3%;
+    margin-top: 1%;
     box-shadow: 0px 10px grey;
+    margin-left: 306px;
 }
 .naslov h4 {
     font-size: 32px;
