--- a/test-project3/css/main.css
+++ b/test-project3/css/main.css
@@ -122,7 +122,7 @@ body {
 .content-aboutus-center {
     float: right;
     text-decoration: none;
-    color: #b92d1f;
+    color: #b92d1f !important;
     margin-right: 28px;
 }
 .text-quote {
@@ -165,4 +165,25 @@ form textarea {
 .send {
     width: auto;
     margin: 0 18px;
+}
+.post-title {
+    font-size: 20px;
+}
+.post-date {
+    font-size: 12px;
+    margin-top: 0px !important;
+}
+.copyright {
+    width: 100%;
+    height: 50px;
+    margin-top: 25px;
+    background-color: #f2f2f2;
+}
+.copyleft {
+    float: left;
+    margin: 20px 0 0 16px;
+}
+.copydesno{
+    float: right;
+    margin: 20px 16PX 0 0;
 }
