--- a/test-project 4/css/main.css
+++ b/test-project 4/css/main.css
@@ -101,5 +101,24 @@ hr {
     display: inline-block;
 }
 .latestimg img {
-    margin-left: 11%;
+    margin: 0 0 4% 11%; 
+}
+.footer {
+    background-color: #e2e2e2;
+    width: 100%;
+    display: inline-block;
+}
+.footer-width {
+    margin: 0 20px;
+    padding: 24px 0 0;
+}
+.blog-post {
+    width: 39%;
+    height: auto;
+}
+.slika1 {
+    width: 95px;
+    height: 95px;
+    display: inline-block;
+    margin-top: 12px;
 }
